--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,6 @@ input.yellow-input:focus{
     border-bottom: 1px solid #ffeb3b!important;
     box-shadow: 0 1px 0 0 #ffeb3b!important;
 }
+select{
+    display: block;
+}
